--- a/index.html
+++ b/index.html
@@ -48,3 +48,54 @@
             <a href="#welcome">
                 <button class="btn bg-info floater  infinite delay-2s">Go</button>
             </a>
+        </a>
+        <div class="socials">
+            <a href=""><span class="fab fa-facebook icon_facebook"></span></a>
+            <a href=""><span class="fab fa-twitter icon_twitter"></span></a>
+            <a href=""><span class="fab fa-google-plus icon_googlep"></span></a>
+            <a href=""><span class="fab fa-linkedin icon_linkedin"></span></a>
+        </div>
+    </div>
+</div>
+</div>
+<!--End Landing-->
+
+<!--Welcome Section-->
+
+<div class="welcome" id="welcome">
+<br><br><br><br>
+<div class="col-sm-12">
+    <div class="row">
+        <div class="col-sm-6">
+            <img src="images/sec/ab1.png" alt="chef-cartoon" class="karibu-img">
+        </div>
+        <div class="col-md-6 karibu-txt">
+            <h1 class="text-center txt txt-big">Karibu <span class="pizz">Pizza </span><span class="exc">pap!</span>
+            </h1>
+            <p class="text-center txt">The best pizza you'll ever taste</p>
+            <p class="text-center txt">Order your pizza and we wil deliver it to your location.</p>
+            <a href="#menus">
+                <button class="btn bg-info mx-auto d-block menu-btn">Menu</button>
+            </a>
+        </div>
+    </div>
+</div>
+</div>
+<!--Start Content-->
+
+<div id="menus"></div>
+<br>
+<div class="menu col-md-12">
+<div class="menu-overlay">
+    <h1 class="text-center text-white" id="menu">Menu</h1>
+    <div class="pizza-menu row text-center">
+        <figure class="col-sm-4">
+            <img src="images/2.png" alt="small-pizza" class="wiggle">
+            <figcaption class="text-white">Regular<br>Ksh. 300</figcaption>
+        </figure>
+        <figure class="col-sm-4">
+            <img src="images/1.png" alt="medium-pizza" class="wiggle">
+            <figcaption class="text-white">Medium<br>Ksh. 600</figcaption>
+        </figure>
+        <figure class="col-sm-4">
+            <img src="images/3.png" alt="large-pizza" class="wiggle">
