add initial index page

--- a/index.html
+++ b/index.html
@@ -152,3 +152,56 @@
             </select>
             <label for="number">Number of Pizza's</label>
             <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1" required>
+
+
+        </form>
+        <a href="#summary">
+            <button type="submit" class="btn btn-success checkout" id="checkout">
+                Checkout
+            </button>
+        </a>
+
+    </div>
+    <div class="col-sm-2"></div>
+</div>
+</div>
+
+<div class="order-summary" id="sum-order">
+<h1 class="text-center" id="summary">Order Summary</h1>
+<h2 class="text-center summary">Hello there, your order is as follows:</h2>
+<ol id="list" class="text-center sum">
+</ol>
+
+
+<div class="cdata-overlay">
+    <div class="customerdata row">
+        <div class="col-sm-3"></div>
+        <form action="" class="form-group col-sm-6 data">
+            <input type="text" class="form-control cdata" placeholder="Enter your Name:">
+            <input type="text" class="form-control cdata" placeholder="Enter your phone number: ">
+            <input type="text" class="form-control cdata" placeholder="Enter the location: ">
+            <button class="btn bg-info text-center d-block mx-auto go">Make Delivery</button>
+        </form>
+
+        <div class="col-sm-3"></div>
+    </div>
+</div>
+<div class="d-block mx-auto text-center">
+    <button class='deliver'>Make Delivery</button>
+    <button class='delivernot'>Pick Up</button>
+</div>
+</div>
+
+<div class="contacts">
+<div class="contact-overlay">
+    <h1 class="text-center contact text-white">Contacts:</h1>
+    <div class="row">
+        <div class="col-sm-1"></div>
+        <div class="col-sm-5 subs">
+            <h1 class="text-white text-center"> Call Us </h1>
+            <p class="text-center">+254 1211 5461</p>
+            <form>
+                <div class="email-info">
+                    <div class="form-group fill-all-form">
+                        <input type="email" class="form-control bg-transparent email" id="email" placeholder="Email"
+                               required="">
