add initial index file

--- a/index.html
+++ b/index.html
@@ -205,3 +205,25 @@
                     <div class="form-group fill-all-form">
                         <input type="email" class="form-control bg-transparent email" id="email" placeholder="Email"
                                required="">
+                            </div>
+                        </div>
+                        <div class=" email-info text-center">
+                            <button class="btn click-me" onclick="subscribe();">Subscribe</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-sm-5">
+                    <h4 class="text-center get-pizza">We love feedback..send us a mail</h4>
+                </div>
+                <div class="col-sm-1"></div>
+            </div>
+        </div>
+    </div>
+    
+    <!--End Content-->
+    
+    </body>
+    <script src="js/jquery.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/scrollify.js"></script>
+    </html>
