--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Pizza App</title>
+    <title>wizzapizza</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Wicked css -->
@@ -24,7 +24,7 @@
 <body>
 <!--Start Navigation //-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
-    <h1 id="piz-pap" class="">Pi<span id="spantext">zz</span>a pap!</h1>
+    <h1 id="wizza" class="">Pi<span id="spantext">zz</span>a</h1>
     <div class="navi">
         <ul class="nav-items">
             <li><a href="#menus">Menu</a></li>
@@ -41,8 +41,8 @@
     <div class="overlay">
         <div id="push"></div>
         <div class="landing-text">
-            <h1 class="text-white text-center"><span class="pizz">Pizza </span><span class="exc">pap!</span></h1>
-            <h2 class="text-white text-center">Get your pizza in an instant.</h2>
+            <h1 class="text-white text-center"><span class="pizz">wizza </span><span class="exc">pizza</span></h1>
+            <h2 class="text-white text-center">Get your wizzapizza in an instant.</h2>
         </div>
         <div class="h-buttons text-center">
             <a href="#welcome">
@@ -67,10 +67,10 @@
 <div class="col-sm-12">
     <div class="row">
         <div class="col-sm-6">
-            <img src="images/sec/ab1.png" alt="chef-cartoon" class="karibu-img">
+            <img src="images/sec/ab1.png" alt="wizzard-cartoon" class="karibu-img">
         </div>
         <div class="col-md-6 karibu-txt">
-            <h1 class="text-center txt txt-big">Karibu <span class="pizz">Pizza </span><span class="exc">pap!</span>
+            <h1 class="text-center txt txt-big">Karibu <span class="wizz">wizza </span><span class="exc">pizza</span>
             </h1>
             <p class="text-center txt">The best pizza you'll ever taste</p>
             <p class="text-center txt">Order your pizza and we wil deliver it to your location.</p>
@@ -99,6 +99,7 @@
         </figure>
         <figure class="col-sm-4">
             <img src="images/3.png" alt="large-pizza" class="wiggle">
+            <figcaption class="text-white">Medium<br>Ksh. 900</figcaption>
         </figure>
     </div>
 </div>
@@ -112,7 +113,7 @@
         <form class="col-sm-6 offset-sm-3 text-center">
             <label>Pick your pizza Flavour:</label>
             <select class="custom-select custom-select-md mb-3 flavour" required>
-                <option value="vegtikka">Veg Tikka</option>
+                <option value="veggie">Veg Tikka</option>
                 <option value="chickentikka">Chicken Tikka</option>
                 <option value="periperi">Peri-Peri Chicken</option>
                 <option value="bbq">BBQ Steak</option>
@@ -199,7 +200,7 @@
         <div class="col-sm-1"></div>
         <div class="col-sm-5 subs">
             <h1 class="text-white text-center"> Call Us </h1>
-            <p class="text-center">+254 1211 5461</p>
+            <p class="text-center">+254 701336427</p>
             <form>
                 <div class="email-info">
                     <div class="form-group fill-all-form">
