--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <div id="push"></div>
         <div class="landing-text">
             <h1 class="text-white text-center"><span class="pizz">wizza </span><span class="exc">pizza</span></h1>
-            <h2 class="text-white text-center">Get your wizzapizza in an instant.</h2>
+            <h2 class="text-white text-center">Get your wizzapizza fast.</h2>
+            <h3 class="text-white text-center">get it easy.</h3>
         </div>
         <div class="h-buttons text-center">
             <a href="#welcome">
