--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <h1 class="text-white text-center"><span class="pizz">wizza </span><span class="exc">pizza</span></h1>
             <h2 class="text-white text-center">Get your wizzapizza fast.</h2>
             <h3 class="text-white text-center">get it easy.</h3>
+            <h4 class="text-white text-center">get it at your own comfort.</h4>
+
         </div>
         <div class="h-buttons text-center">
             <a href="#welcome">
