--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h1 class="text-center txt txt-big">Karibu <span class="wizz">wizza </span><span class="exc">pizza</span>
             </h1>
             <p class="text-center txt">The best pizza you'll ever taste</p>
-            <p class="text-center txt">Order your pizza and we wil deliver it to your location.</p>
+            <p class="text-center txt">Order your pizza and we wil deliver it to your location in a jiffy.</p>
             <a href="#menus">
                 <button class="btn bg-info mx-auto d-block menu-btn">Menu</button>
             </a>
