--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="col-md-6 karibu-txt">
             <h1 class="text-center txt txt-big">Karibu <span class="wizz">wizza </span><span class="exc">pizza</span>
             </h1>
-            <p class="text-center txt">The best pizza you'll ever taste</p>
+            <p class="text-center txt">The best pizza you'll ever taste.</p>
             <p class="text-center txt">Order your pizza and we wil deliver it to your location in a jiffy.</p>
             <a href="#menus">
                 <button class="btn bg-info mx-auto d-block menu-btn">Menu</button>
