--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <br>
 <div class="menu col-md-12">
 <div class="menu-overlay">
-    <h1 class="text-center text-white" id="menu">Menu</h1>
+    <h1 class="text-center text-white" id="menu">Menu.</h1>
     <div class="pizza-menu row text-center">
         <figure class="col-sm-4">
             <img src="images/2.png" alt="small-pizza" class="wiggle">
