--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </form>
                 </div>
                 <div class="col-sm-5">
-                    <h4 class="text-center get-pizza">We love feedback..send us a mail</h4>
+                    <h4 class="text-center get-pizza">We love your  feedback..send us a mail</h4>
                 </div>
                 <div class="col-sm-1"></div>
             </div>
